# rust-openfaas

./: README.md
template/rust/: .dockerignore  Dockerfile
template/rust/function/: Cargo.toml
template/rust/function/src/: main.rs
template/rust/openfaas-runtime/: Cargo.toml
template/rust/openfaas-runtime/src/: lib.rs
