[package]
name = "function"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfaas-runtime = { git = "https://github.com/bchalios/openfaas-runtime", tag = "v0.1.0" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde_json = "^1"
