[package]
name = "openfaas-runtime"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
hyper = { version = "0.14.3", features = ["full"] }
log = "0.4"
tower-service = "0.3.1"
http = "0.2"
